
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_14__ TYPE_7__ ;
typedef struct TYPE_13__ TYPE_6__ ;
typedef struct TYPE_12__ TYPE_5__ ;
typedef struct TYPE_11__ TYPE_4__ ;
typedef struct TYPE_10__ TYPE_3__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_11__ {int width; int height; int x; int y; } ;
struct TYPE_14__ {TYPE_4__ refdef; TYPE_2__* snap; } ;
struct TYPE_13__ {int integer; } ;
struct TYPE_10__ {int vidWidth; int vidHeight; } ;
struct TYPE_12__ {TYPE_3__ glconfig; } ;
struct TYPE_8__ {scalar_t__ pm_type; } ;
struct TYPE_9__ {TYPE_1__ ps; } ;


 scalar_t__ PM_INTERMISSION ;
 TYPE_7__ cg ;
 TYPE_6__ cg_viewsize ;
 TYPE_5__ cgs ;
 int trap_Cvar_Set (char*,char*) ;

__attribute__((used)) static void CG_CalcVrect (void) {
 int size;


 if ( cg.snap->ps.pm_type == PM_INTERMISSION ) {
  size = 100;
 } else {

  if (cg_viewsize.integer < 30) {
   trap_Cvar_Set ("cg_viewsize","30");
   size = 30;
  } else if (cg_viewsize.integer > 100) {
   trap_Cvar_Set ("cg_viewsize","100");
   size = 100;
  } else {
   size = cg_viewsize.integer;
  }

 }
 cg.refdef.width = cgs.glconfig.vidWidth*size/100;
 cg.refdef.width &= ~1;

 cg.refdef.height = cgs.glconfig.vidHeight*size/100;
 cg.refdef.height &= ~1;

 cg.refdef.x = (cgs.glconfig.vidWidth - cg.refdef.width)/2;
 cg.refdef.y = (cgs.glconfig.vidHeight - cg.refdef.height)/2;
}
